# graphify-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  claude_desktop_config.json  mcp.json  pyproject.toml
.claude/skills/graphify-explore/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benchmarks/: multilang.py
docs/: benchmark.html  benchmark.tr.html
src/graphify_mcp/: __init__.py  __main__.py  config.py  graph.py  server.py  spans.py
tests/: conftest.py  test_tools.py
tests/fixtures/: GRAPH_REPORT.md  graph.json
