[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphify-mcp"
version = "0.1.0"
description = "MCP server exposing the Graphify codebase knowledge graph as tools, prompts and resources."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "yasinyaman" }]
keywords = ["mcp", "graphify", "knowledge-graph", "ai", "codebase", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.2.0",
]

[project.optional-dependencies]
graphify = ["graphifyy"]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.urls]
Homepage = "https://github.com/yasinyaman/graphify-mcp"
Repository = "https://github.com/yasinyaman/graphify-mcp"
Issues = "https://github.com/yasinyaman/graphify-mcp/issues"
"Graphify" = "https://graphify.net"

[project.scripts]
# `graphify-mcp` is convenient for standalone installs, but `graphifyy` ships a
# console script of the same name (its embedded server), so whichever is
# installed last wins. `graphify-mcp-server` is collision-free; prefer it (or
# `python -m graphify_mcp`) when both packages are installed.
graphify-mcp = "graphify_mcp.server:main"
graphify-mcp-server = "graphify_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/graphify_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
