[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphify-mcp"
version = "0.2.0"
description = "MCP server exposing the Graphify codebase knowledge graph as tools, prompts and resources."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "yasinyaman" }]
keywords = ["mcp", "graphify", "knowledge-graph", "ai", "codebase", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    # Floor is the tested baseline (mcp 1.26–1.27). This server uses the
    # streamable-HTTP transport (`mcp.streamable_http_app`), tool annotations, and
    # host-LLM sampling (`check_client_capability` / `create_message`) — none of
    # which exist in the old `>=1.2.0` floor, so that floor would install but fail
    # at runtime. Upper bound guards against a breaking 2.0 SDK release.
    "mcp>=1.26,<2.0",
]

[project.optional-dependencies]
graphify = ["graphifyy"]
semble = ["semble>=0.3"]
# Multi-language span/structure backend for graphify_locate and graphify_freshness
# (Python works without it via stdlib ast). tree-sitter also ships with graphify.
# Bounds: the stable `Parser(Language)` core API we use exists since tree-sitter
# 0.22 (cap below the next major). The language pack bundles grammars that churn,
# so it's pinned to the tested 1.x line (`>=1.6,<2.0`) to keep golden span tests
# from silently regressing on a grammar update.
treesitter = ["tree-sitter>=0.22,<1.0", "tree-sitter-language-pack>=1.6,<2.0"]
# Exact token counting for the budgeted subgraph tools (opt-in via
# GRAPHIFY_TOKENIZER=tiktoken); without it the conservative chars/3.5 estimate is used.
tiktoken = ["tiktoken>=0.7"]
all = [
    "graphifyy", "semble>=0.3",
    "tree-sitter>=0.22,<1.0", "tree-sitter-language-pack>=1.6,<2.0",
    "tiktoken>=0.7",
]
dev = ["pytest>=8.0", "ruff>=0.6", "pytest-cov>=5.0", "mypy>=1.11"]

[project.urls]
Homepage = "https://github.com/yasinyaman/graphify-mcp"
Repository = "https://github.com/yasinyaman/graphify-mcp"
Issues = "https://github.com/yasinyaman/graphify-mcp/issues"
"Graphify" = "https://graphify.net"

[project.scripts]
# Only collision-free entry points. `graphifyy` ships its own `graphify-mcp`
# console script (its embedded server), so a bare `graphify-mcp` declared here
# would be shadowed by whichever package installed last — silently launching the
# wrong server. Use `graphify-mcp-server` or `python -m graphify_mcp`; both
# always run THIS package.
graphify-mcp-server = "graphify_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/graphify_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
# Non-strict first baseline: type-check the package and catch real type errors
# without demanding exhaustive annotations. ignore_missing_imports covers the
# third-party deps that ship no stubs (mcp, semble, tree-sitter). The MCP tool
# signatures are fully typed — FastMCP derives each tool's JSON schema from them.
python_version = "3.10"
files = ["src/graphify_mcp"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["graphify_mcp"]

[tool.coverage.report]
show_missing = true
# main()/HTTP-transport wiring and a few defensive guards aren't exercised by the
# unit suite; 80 is a floor comfortably below the current ~87% line coverage.
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
